rebase and add state to kvstore
